# practise_python

./: .gitignore  .pre-commit-config.yaml  README.md  decorator.py  game.py  list.py  mypy.ini  oop.py  pyproject.toml  python_1.py  python_2_for.py  python_3_if.py  test.py  wtf.py
MidTerm/: prog_8.py  test.py
advance/: abstract.py  decorator.py  double_leading_underscore.py  object_oriented.py  polymorphism.py
algorithm/binary_tree/: create_binary_tree_with_array.py  create_binary_tree_with_linked_list.py  practise_2_postorder_depth.py
algorithm/from_book/: .pylintrc  mypy.ini  pyproject.toml
algorithm/from_book/src/chap_3/: resources.py  task_3_8_3.py  task_3_8_4.py  task_3_8_5.py
algorithm/linked_list/: double_linked_list.py  linked_list.py
algorithm/practise/: hanoi.py  palindrome.py  prime_number.py  string_memory.py  thread_and_process.py
algorithm/search/: binary_search.py
algorithm/sort/: bubble_sort.py  cocktail_sort.py  heap_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  selection_sort.py
async_practise/: 1_create_task.py  2_create_task_exception.py
basic/: 1_print_variable.py  2_for_loop.py  3_if.py  4_rock_paper_scissors.py  4_rock_paper_scissors_ans.py  5_context_manager.py  6_abstract.py  7_mro.py  game.py
corsa/: prometheus.py
design_pattern/: event_checker.py
docker_ubuntu/: Dockerfile
fastapi_practise/: 0_entry.py  1_post_pydantic_object.py  2_abstract_pydantic.py  3_depends.py  4_response_model.py  5_with_validator.py  6_path.py  7_discriminator_request.py  8_type_annotated.py  README.md  filtering_test.py  for_test.py  requirements.txt
mock_practise/: 0_entry.py  1_return_value.py  2_configuring.py  3_patch.py
mypy_practise/: 0_entry.py  1_fields.py  logger.ini
oop/: 0_object_private_variable.py  1_decorator.py  2_abstract.py  3_interface.py  filters.py  query_rule.py  router.py
poetry_practise/: README.md  poetry_example.py  pyproject.toml
postgres_test/: README.md
postgres_test/app/: app.py
postgresql_practise/: README.md  app.py  docker-compose.yml  entry.py
pydantic_practise/: 0_entry.py  1_mutation.py  2_orm.py  3_validator.py  4_inheritance.py  5_base_setting.py  6_discriminator.py  7_construct.py
pyenv/: README.md
pynput_practise/: keyboard_copy.py
pyside6_practise/: 0_base_model.py  0_keyboard_event.py  1_keyboard_event.py  2_thread_with_qobject.py  3_system_tray.py  4_menubar.py  hotkey_fail_case.py  hotkey_work_case.py  test.py
pytest_practise/: 0_entry.py  1_asterisk.py  3_multiple_requests.py  4_global_fixture.py  6_patch_decorator.py  7_mark_parametrize.py  README.md  conftest.py
redis_practise/: 0_redis_entry.py  1_aioredis_entry.py  1_aioredis_entry_deprecated.py  2_aioredis_connection_pool.py  3_aioredis_conntext_manager.py  3_aioredis_context_manager.py  README.md
setup_practise/: README.md  requirements.txt  setup.cfg  setup.py
setup_practise/cso/: main.py
shell_exec/: test.py
sqlalchemy_practise/: 0_entry.py
(+75 files in other folders)
