[tool.poetry]
name = "practise-python"
version = "0.1.0"
description = ""
authors = ["Gao Zheng <ba361006@gmail.com>"]
readme = "README.md"
packages = [{include = "practise_python"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10" # for pyside6
pydantic = "*"
fastapi = "*"
sqlalchemy = "*"
PySide6 = "*"
pytest = "*"
redis = "^4.3.4"

[tool.poetry.group.dev]
# optional = true indicates packages under the group.dev.dependencies
# will only be installed while calling `poetry install --with dev`
optional = false

[tool.poetry.group.dev.dependencies]
pylint = "*"
mypy = "*"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
