[metadata]
name = c2-cso-speedtest
summary = Definition and implementation of the API backend for the c2 cso speedtest project.
description_file =
    README.md
author = Corsa
author_email = corsa.sw@corsa.com
home_page = http://corsa.com
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages-root = src
# hack to have pbr find package in subdir
packages = src

[entry_points]
console_scripts =
    cso-speedtest = cso.main:main
