[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = ""
authors = ["Gao Zheng <ba361006@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pylint = "2.15.3"
mypy = "0.971"
black = "22.8.0"
pre-commit = "2.20.0"
pytest = "7.2.0"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"